[tool.poetry]
name = "qiskit-textbook-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pylatexenc = "^2.10"
numexpr = "^2.8.1"
qiskit_textbook = { path = "./vendor/qiskit-textbook/qiskit-textbook-src" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
